  * New binary package uwsgi-plugin-systemd-logger.
  * New binary package uwsgi-plugin-transformation-gzip.
  * New binary package uwsgi-plugin-transformation-tofile.
  * New binary package uwsgi-plugin-transformation-toupper.
  * New binary package uwsgi-plugin-v8:
     - New Build-Depends libv8-dev.
  * New binary package uwsgi-plugin-xslt:
     - New Build-Depends libxslt1-dev.
  * Remove no longer provided plugins:
    - uwsgi-plugin-probeconnect
    - uwsgi-plugin-probepg
    - python-uwsgicc
    - python-django-uwsgi-admin
  * uwsgi-extra:
    - Remove no longer provided nginx and lighttpd directories.
    - Update description.

 -- Janos Guljas <janos@debian.org>  Wed, 06 Feb 2013 20:10:31 +0100

uwsgi (1.4.4+dfsg-1) experimental; urgency=low

  * New upstream release. (Closes: #698691)
  * Remove upstream applied patches:
    - fixed-a-leak-in-uwsgi.workers.patch
    - fixed-magic_table-usage-in-http-and-fastrouter-plugins.patch
    - security-check-in-the-http-router.patch
    - threading-issue-with-uwsgi-send.patch
    - fixed-ruby-rvm-support.patch
    - fixed-spooler-with-chdir.patch
    - fixed-async+threading.patch
    - skip-headers-sending-when-no-headers-are-defined.patch
    - fixed-logfile-inheritance.patch
    - fixed-waitpid-usage-in-cheap-cheaper-lazy-modes.patch
    - fixed-casting-in-wsgi-input.patch
    - fixed-casting-in-wsgi-input-web3-pump-part.patch
    - fixed-env-clear-in-plain-async-mode.patch
    - allows-ugreen-with-threads.patch
    - fix-mod_uwsgi-authenticated-but-authentication-typeless-requests.patch
    - fixed-fastcgi-support-for-response-bigger-than-64k.patch
    - disable-SIGSTOP-SIGTSTP-in-gateways.patch
    - fixed-idle-mode.patch
  * Update patches:
    - fix-reload-process-name.patch
  * debian/rules:
    - Update path for example configuration files.
    - Remove uwsgibuild.* files on clean.
  * Update my email address.
  * Update debian/copyright.
  * debian/control:
    - Remove DM-Upload-Allowed field.