@@ -1,1 +1,1 @@
-LoadModule uwsgi_module /usr/lib/apache2/modules/mod_@@module_name@@.so
+LoadModule @@apache_module_name@@_module /usr/lib/apache2/modules/mod_@@module_name@@.so
